--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
 click = "^8.1.8"
 pyyaml = "^6.0.2"
+tqdm = "^4.67.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
